WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
156380
Remote Inspector: When disallowing remote inspection on a debuggable, a listing is still sent to debuggers
https://bugs.webkit.org/show_bug.cgi?id=156380
Summary
Remote Inspector: When disallowing remote inspection on a debuggable, a listi...
Joseph Pecoraro
Reported
2016-04-07 17:12:04 PDT
* SUMMARY When disallowing remote inspection on a debuggable, a listing is still sent to debuggers. * STEPS TO REPRODUCE 1. Create a WKWebView 2. Disallow remote inspection on it ([wkWebView _setAllowsRemoteInspection:NO]) => It still shows up in debuggers, it shouldn't. When connecting to it, inspection does not work anyways.
Attachments
[PATCH] Proposed Fix
(2.57 KB, patch)
2016-04-07 17:14 PDT
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2016-04-07 17:12:16 PDT
<
rdar://problem/25323727
>
Joseph Pecoraro
Comment 2
2016-04-07 17:14:24 PDT
Created
attachment 275963
[details]
[PATCH] Proposed Fix There is no infrastructure to test Remote Inspection semantics. That would be a large project and something we want to do in the future.
WebKit Commit Bot
Comment 3
2016-04-07 18:27:43 PDT
Comment on
attachment 275963
[details]
[PATCH] Proposed Fix Clearing flags on attachment: 275963 Committed
r199208
: <
http://trac.webkit.org/changeset/199208
>
WebKit Commit Bot
Comment 4
2016-04-07 18:27:47 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug