Remote Inspector: When disallowing remote inspection on a debuggable, a listing is still sent to debuggers https://bugs.webkit.org/show_bug.cgi?id=156380 <rdar://problem/25323727>

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2016-04-07
Reviewed by Timothy Hatcher.

* inspector/remote/RemoteInspector.mm:
(Inspector::RemoteInspector::updateTarget):
(Inspector::RemoteInspector::updateAutomaticInspectionCandidate):
When a target has been updated and it no longer generates a listing,
we should remove the old listing as that is now stale and should
not be sent. Not generating a listing means this target is no
longer allowed to be debugged.

Canonical link: https://commits.webkit.org/174477@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@199208 268f45cc-cd09-0410-ab3c-d52691b4dbfc