Source/JavaScriptCore/inspector/remote/RemoteInspector.mm
@@ -171,8 +171,11 @@ void RemoteInspector::updateTarget(RemoteControllableTarget* target)
     }
 
     // If the target has just allowed remote control, then the listing won't exist yet.
+    // If the target has no identifier remove the old listing.
     if (RetainPtr<NSDictionary> targetListing = listingForTarget(*target))
         m_targetListingMap.set(targetIdentifier, targetListing);
+    else
+        m_targetListingMap.remove(targetIdentifier);
 
     pushListingsSoon();
 }
@@ -191,8 +194,11 @@ void RemoteInspector::updateAutomaticInspectionCandidate(RemoteInspectionTarget*
         ASSERT_UNUSED(result, !result.isNewEntry);
 
         // If the target has just allowed remote control, then the listing won't exist yet.
+        // If the target has no identifier remove the old listing.
         if (RetainPtr<NSDictionary> targetListing = listingForTarget(*target))
             m_targetListingMap.set(targetIdentifier, targetListing);
+        else
+            m_targetListingMap.remove(targetIdentifier);
 
         // Don't allow automatic inspection unless it is allowed or we are stopped.
         if (!m_automaticInspectionEnabled || !m_enabled) {
